fix on tablet styles

--- a/src/blocks/form.blocks/desktop.blocks/add-plan/__steps/__fun/__country-desc/__country-desc.less
+++ b/src/blocks/form.blocks/desktop.blocks/add-plan/__steps/__fun/__country-desc/__country-desc.less
@@ -1,6 +1,6 @@
 .country-desc {
 
-  .tablet({
+  .desktop({
     &::before {
       left: 773px;
     }
